bytegr.candidates.manager - web

--- a/bytegr.candidates.manager.web/Views/Shared/_Layout.cshtml
+++ b/bytegr.candidates.manager.web/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/bytegr.candidates.manager.web.styles.css" asp-append-version="true" />
+    @using Microsoft.AspNetCore.Http.Extensions
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">bytegr.candidates.manager.web</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="align-content:center">bytegr.candidates.manager.web</a>
+                @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                </div>
+                </div>*@
             </div>
         </nav>
     </header>
@@ -38,7 +39,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - bytegr.candidates.manager.web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <p><small>@Context.Request.GetDisplayUrl()</small></p>
+            @*&copy; 2023 - bytegr.candidates.manager.web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
