bytegr.candidates.manager - web (changes and fixes)
some functions need further implementation

--- a/bytegr.candidates.manager.web/Views/Candidate/Add.cshtml
+++ b/bytegr.candidates.manager.web/Views/Candidate/Add.cshtml
@@ -1,4 +1,3 @@
 ﻿@model bytegr.candidates.manager.data.Dtos.CandidateDto
-<h1 style="font-weight:bolder;font-size:70px" ;visibility:hidden>Add</h1>
-@Html.Partial("_RegistrationFormView")
+@Html.Partial("_SharedViewAddCandidate")
 
