--- a/bytegr.candidates.manager.web/Views/Candidate/Edit.cshtml
+++ b/bytegr.candidates.manager.web/Views/Candidate/Edit.cshtml
@@ -1,3 +1,2 @@
 ﻿@model bytegr.candidates.manager.data.Dtos.CandidateDto
-<h1 style="font-weight:bolder;font-size:70px">Edit</h1>
-@Html.Partial("_RegistrationFormView")
+@Html.Partial("_SharedViewAddCandidate")
