--- a/bytegr.candidates.manager.web/Views/Degree/Add.cshtml
+++ b/bytegr.candidates.manager.web/Views/Degree/Add.cshtml
@@ -1,11 +1,18 @@
 ﻿@model bytegr.candidates.manager.data.Dtos.CandidateDto
-@using Microsoft.AspNetCore.Http.Extensions
+@Html.Partial("_SharedViewTitle")
 
-<h1 style="font-weight:bolder;font-size:68px">Add</h1>
-<p style="margin-top:0px; margin-left:10px;margin-bottom:20px;font-size:x-small">@Context.Request.GetDisplayUrl()</p>
+<button type="submit"
+        asp-action="Add"
+        asp-controller="Candidate"
+        asp-route-candidateDto="@Model"
+        asp-route-isEditMode="@ViewData["IsEditMode"]" form="form" class="btn btn-primary btn-sm">
+    Submit
+</button>
 
-<form method="post" asp-action="Add" asp-controller="Degree" asp-route-candidateDto="@Model"
-      enctype="multipart/form-data" style="margin-top:20px">
+<button type="button" class="btn btn-secondary btn-sm">Dismiss</button>
+
+<!-- Form -->
+<form method="post" id="form" enctype="multipart/form-data" style="margin-top:20px" asp-action="Add" asp-controller="Degree" asp-route-candidateDto="@Model">
 
     <!-- Id -->
     <div class="row form-group" style="padding:3px">
@@ -17,69 +24,73 @@
         </div>
     </div>
 
-    <!-- Degrees -->
-    <div class="row form-group" style="padding:3px">
-        <div class="col-md-2">
-            <label asp-for="Degrees" style="font-size:larger;font-weight:bolder"></label>
-        </div>
-        <div class="col-md-3">
-            <select id="selector-cv" asp-for="SelectedDegreeId" class="form-control">
-                @*<option selected>CV list</option>*@
-                @foreach (var degree in Model.Degrees)
-                {
-                    <option value="@degree.Id">@degree.Name</option>
-                    @*<span class="badge badge-primary">Primary</span>*@
-                }
-            </select>
-        </div>
-        <div class="col-md-4">
-            <span></span>
-        </div>
-    </div>
-
-
-
-    @*<div method="post" asp-action="Delete" asp-controller="YourController">
-        <select id="selector-cv" asp-for="SelectedDegreeId" class="form-control">
-            @foreach (var degree in Model.Degrees)
-            {
-                <option value="@degree.Id">@degree.Name</option>
-            }
-        </select>
-
-        
-    </div>*@
-
-
-
     <!-- New Degree -->
     <div class="row form-group" style="padding:3px">
         <div class="col-md-2">
             <label asp-for="Degrees" style="font-size:larger;font-weight:bolder">Insert degree</label>
         </div>
         <div class="col-md-3">
-            <input id="degree-new" type="text" name="degreeName" class="form-control" placeholder="New degree" />
+            <input id="degree-new" type="text" name="degreeName" oninput="checkInput()" class="form-control" placeholder="New degree" />
         </div>
         <div class="col-md-4">
-            <span class="text-danger"></span>
+            <button id="degree-button"
+                    type="submit"
+                    asp-action="Add"
+                    asp-controller="Degree"
+                    asp-route-candidate-degreeName="degreeName"
+                    asp-route-isInsertMode="true"
+                    asp-route-candidateDto="@Model.Id"
+                    asp-route-isEditMode="@ViewData["IsEditMode"]" style="margin-top:4px;margin-left:-15px" class="btn btn-success btn-sm"
+                    disabled>
+                Insert
+            </button>
         </div>
     </div>
 
-    <!-- Submit -->
-    <div class="row form-group" style="padding:3px">
-        <div class="col-md-2 col-md-offset-2">
-            <label></label>
+    <!-- Degrees -->
+    <div class="row" style="margin-top:20px">
+        <div class="col-md-10 col-md-offset-2">
+            <table class="table">
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>CandidateId</th>
+                    <th></th>
+                </tr>
+                @foreach (var degree in Model.Degrees)
+                {
+                    <tr>
+                        <td>@degree.Id</td>
+                        <td>@degree.Name</td>
+                        <td>@degree.CandidateId</td>
+                        <td>
+                            <a asp-controller="Degree"
+                               asp-action="Delete"
+                               asp-route-degreeId="@degree.Id"
+                               asp-route-isEditMode="@ViewData["IsEditMode"]"
+                               asp-route-isCandidate="true"
+                               asp-route-candidateDto="@Model.Id" class="btn btn-danger btn-sm">Delete</a>
+                        </td>
+                        @*<button type="submit" asp-action="Delete" asp-controller="Degree" asp-route-candidateDto="@Model.Id" class="btn btn-danger">Delete</button>*@
+                    </tr>
+                }
+            </table>
         </div>
-        <div class="col-md-6">
-            <button type="submit" asp-action="Add" asp-controller="Candidate" asp-route-candidateDto="@Model" class="btn btn-primary">Submit</button>
-            <button type="submit" asp-action="Add" asp-controller="Degree" asp-route-candidate-degreeName="degreeName" asp-route-candidateDto="@Model.Id" class="btn btn-success">Insert</button>
-            <button type="submit" asp-action="Delete" asp-controller="Degree" asp-route-candidateDto="@Model.Id" class="btn btn-danger">Delete</button>
-            <button type="submit" asp-controller="Degree" asp-action="Delete" class="btn btn-danger">Delete</button>
-        </div>
-        @*<div class="col-md-4">
-                  <span class="text-danger"></span>
-            </div>*@
     </div>
+
+    <script>
+        function checkInput() {
+            var inputText = $('#degree-new').val();
+
+            if (inputText.trim() !== '') {
+                $('#degree-button').prop('disabled', false);
+            } else {
+                $('#degree-button').prop('disabled', true);
+            }
+        }
+    </script>
+
+
 
     <!-- todo::with shared layout-->
     <div class="col-md-2">
@@ -95,6 +106,8 @@
         <input type="tel" class="form-control" asp-for="Mobile" hidden />
     </div>
     <div class="col-md-2">
-        <input type="file" class="form-control" asp-for="CvFile" />
+        <input type="file" class="form-control" asp-for="CvFile" hidden />
     </div>
 </form>
+
+
