--- a/bytegr.candidates.manager.web/Views/Shared/_Layout.cshtml
+++ b/bytegr.candidates.manager.web/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <p><small>@Context.Request.GetDisplayUrl()</small></p>
+            @*<p><small>@Context.Request.GetDisplayUrl()</small></p>*@
             @*&copy; 2023 - bytegr.candidates.manager.web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
