--- a/bytegr.candidates.manager.web/Views/Shared/_SharedViewTitle.cshtml
+++ b/bytegr.candidates.manager.web/Views/Shared/_SharedViewTitle.cshtml
@@ -6,4 +6,4 @@
 
 <h1 style="font-weight:bolder;font-size:62px">@ViewData["Title"]</h1>
 <p style="margin-left:0px;margin-top:-10px"><small><mark>@ViewData["Url"]</mark></small></p>
-<label>@isEditMode</label>
+@*<label>@isEditMode</label>*@
