bytegr.candidates.manager - updates

--- a/bytegr.candidates.manager.web/Views/Candidate/Index.cshtml
+++ b/bytegr.candidates.manager.web/Views/Candidate/Index.cshtml
@@ -5,7 +5,7 @@
 <p style="margin-top:0px; margin-left:10px;margin-bottom:20px;font-size:x-small">@Context.Request.GetDisplayUrl()</p>*@
 
 <a asp-controller="Candidate" asp-action="Add" class="btn btn-success btn-sm">Add Candidate</a>
-<a asp-action="index" asp-controller="Home" class="btn btn-secondary btn-sm btn-block">Return</a>
+<a asp-action="Index" asp-controller="Home" class="btn btn-secondary btn-sm btn-block">Return</a>
 
 <div class="row" style="margin-top:20px">
     <div class="col-md-10 col-md-offset-2">
