--- a/bytegr.candidates.manager.web/Views/Degree/Index.cshtml
+++ b/bytegr.candidates.manager.web/Views/Degree/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<bytegr.candidates.manager.data.Dtos.DegreeDto>
 @Html.Partial("_SharedViewTitle")
 
-<a asp-action="index" asp-controller="Home" class="btn btn-secondary btn-sm btn-block">Return</a>
+<a asp-action="Add" asp-controller="Degree" class="btn btn-success btn-sm btn-block">Add</a>
+<a asp-action="Index" asp-controller="Home" class="btn btn-secondary btn-sm btn-block">Return</a>
 
 <div class="row" style="margin-top:20px">
     <div class="col-md-10 col-md-offset-2">
