--- a/bytegr.candidates.manager.web/Views/Shared/_SharedViewAddCandidate.cshtml
+++ b/bytegr.candidates.manager.web/Views/Shared/_SharedViewAddCandidate.cshtml
@@ -213,6 +213,6 @@
         }
         function convertCvFIle() {
             document.getElementById('convert-cv-file').click();
-        }</script>
-
+        }
+    </script>
 </form>
